change content display to block to avoid white space when no need horezontal scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -59,6 +59,7 @@
   }
   ._no_x {
     width: 100%;
+    display: block;
   }
   ._x_scroller_container {
     @extend ._scroller_container;
